--- a/src/components/login/style.css
+++ b/src/components/login/style.css
@@ -30,7 +30,7 @@
   background-repeat: no-repeat;
   background-position: left bottom;
   background-size: 500px;
-  background-image: url("https://images.unsplash.com/photo-1517504734587-2890819debab?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80");
+  background-image: url("https://images.unsplash.com/photo-1548247416-ec66f4900b2e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=963&q=80");
 }
 .form-structor .signup {
   position: absolute;
@@ -183,6 +183,20 @@
   width: 100%;
   font-size: 12px;
 }
+.form-structor .login  .captchastuff .input {
+  border: 0;
+  outline: none;
+  box-shadow: none;
+  display: block;
+  height: 30px;
+  line-height: 30px;
+  padding: 8px 15px;
+  border-bottom: 1px solid #eee;
+  width: 100%;
+  font-size: 12px;
+}
+
+
 .form-structor .login .center-v1 .form-holder .input:last-child {
   border-bottom: 0;
 }
@@ -232,6 +246,39 @@
 }
 .form-structor .login.slide-up .form-title span {
   margin-right: 5px;
+  opacity: 1;
+  visibility: visible;
+  -webkit-transition: all 0.3s ease;
+}
+
+.center-noflex {
+  /* display: flex; */
+  padding-bottom: 10px;
+  padding-top: 600px;
+  padding-right: 20px;
+  text-align: center;
+  justify-content: center;
+}
+
+.inputCap {
+  border: 0;
+  outline: none;
+  box-shadow: none;
+  display: block;
+  height: 30px;
+  line-height: 30px;
+  padding-top: 8px 15px;
+  border-bottom: 1px solid #eee;
+  width: 100%;
+  font-size: 12px;
+  text-align:center;
+}
+
+.form-holderCap {
+  border-radius: 15px;
+  background-color: #fff;
+  overflow: hidden;
+  margin-top: 10px;
   opacity: 1;
   visibility: visible;
   -webkit-transition: all 0.3s ease;
